--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "firebase": "^9.16.0",
+    "formik": "^2.2.9",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "reactfire": "^4.2.2",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
