--- a/package.json
+++ b/package.json
@@ -1,36 +1,55 @@
 {
-  "name": "discord-clone",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.5",
-    "@supabase/auth-helpers-nextjs": "^0.5.4",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.7.1",
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
-    "formik": "^2.2.9",
-    "next": "13.1.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "typescript": "4.9.4",
-    "yup": "^0.32.11",
-    "zustand": "^4.3.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  }
+	"name": "discord-clone",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"gen": "graphql-codegen --config codegen.ts",
+		"prestart": "yarn gen",
+		"predev": "yarn gen",
+		"gen:schema": "node scripts/fetchGraphQLSchema"
+	},
+	"dependencies": {
+		"@next/font": "13.1.5",
+		"@supabase/auth-helpers-nextjs": "^0.5.4",
+		"@supabase/auth-helpers-react": "^0.3.1",
+		"@supabase/supabase-js": "^2.7.1",
+		"@urql/exchange-graphcache": "^5.0.8",
+		"formik": "^2.2.9",
+		"graphql": "^16.6.0",
+		"next": "13.1.5",
+		"next-urql": "^4.0.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.7.1",
+		"urql": "^3.0.3",
+		"yup": "^0.32.11",
+		"zustand": "^4.3.2"
+	},
+	"devDependencies": {
+		"@graphql-codegen/cli": "3.0.0",
+		"@graphql-codegen/typescript": "^3.0.0",
+		"@graphql-codegen/typescript-operations": "^3.0.0",
+		"@graphql-codegen/typescript-urql": "^3.7.3",
+		"@tailwindcss/forms": "^0.5.3",
+		"@types/node": "18.11.18",
+		"@types/progress": "^2",
+		"@types/react": "18.0.27",
+		"@types/react-dom": "18.0.10",
+		"autoprefixer": "^10.4.13",
+		"cross-undici-fetch": "^0.4.14",
+		"dotenv": "^16.0.3",
+		"eslint": "8.32.0",
+		"eslint-config-next": "13.1.5",
+		"gradient-string": "^2.0.2",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.4",
+		"progress": "^2.0.3",
+		"tailwindcss": "^3.2.4",
+		"typescript": "4.9.4"
+	},
+	"packageManager": "yarn@3.4.1"
 }
